--- a/KpHappy.Data/KpHappy.Data.csproj
+++ b/KpHappy.Data/KpHappy.Data.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="KpHappyDbContext.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
