--- a/KpHappy.Web/Web.config
+++ b/KpHappy.Web/Web.config
@@ -4,10 +4,14 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-	<connectionStrings>
-		<clear />
-		<add name="KpHappyConnection" providerName="System.Data.SqlClient" connectionString="Data Source=ADMIN\SQLEXPRESS2012;Initial Catalog=KpHappyOnlineShop;Integrated Security=False;User Id=sa;Password=123123;MultipleActiveResultSets=True" />
-	</connectionStrings>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+    <clear />
+    <add name="KpHappyConnection" providerName="System.Data.SqlClient" connectionString="Data Source=ADMIN\SQLEXPRESS2012;Initial Catalog=KpHappyOnlineShop;Integrated Security=False;User Id=sa;Password=123123;MultipleActiveResultSets=True" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -68,4 +72,14 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+    <providers>
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+  </entityFramework>
 </configuration>
