tich hop AspNet.Identity

--- a/KpHappy.Data/KpHappy.Data.csproj
+++ b/KpHappy.Data/KpHappy.Data.csproj
@@ -36,6 +36,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -57,6 +63,14 @@
     <Compile Include="Migrations\201801051538214_initdb.cs" />
     <Compile Include="Migrations\201801051538214_initdb.Designer.cs">
       <DependentUpon>201801051538214_initdb.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801061658078_addAspNetIdentity.cs" />
+    <Compile Include="Migrations\201801061658078_addAspNetIdentity.Designer.cs">
+      <DependentUpon>201801061658078_addAspNetIdentity.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201801061726479_updateAspNetIdentity.cs" />
+    <Compile Include="Migrations\201801061726479_updateAspNetIdentity.Designer.cs">
+      <DependentUpon>201801061726479_updateAspNetIdentity.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -81,6 +95,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201801051538214_initdb.resx">
       <DependentUpon>201801051538214_initdb.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801061658078_addAspNetIdentity.resx">
+      <DependentUpon>201801061658078_addAspNetIdentity.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801061726479_updateAspNetIdentity.resx">
+      <DependentUpon>201801061726479_updateAspNetIdentity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
