Cách binding dữ liệu từ WebAPI ra bảng trong HTML bằng AngularJS

--- a/KpHappy.Data/KpHappy.Data.csproj
+++ b/KpHappy.Data/KpHappy.Data.csproj
@@ -77,6 +77,7 @@
     <Compile Include="KpHappyDbContext.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\PostCategoryRepository.cs" />
+    <Compile Include="Repositories\ProductCategoryRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
