--- a/KpHappy.Service/KpHappy.Service.csproj
+++ b/KpHappy.Service/KpHappy.Service.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="ErrorService.cs" />
     <Compile Include="PostCategoryService.cs" />
+    <Compile Include="ProductCategoryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
