--- a/KpHappy.Web/KpHappy.Web.csproj
+++ b/KpHappy.Web/KpHappy.Web.csproj
@@ -197,6 +197,7 @@
   <ItemGroup>
     <Compile Include="Api\AccountController.cs" />
     <Compile Include="Api\PostCategoryController.cs" />
+    <Compile Include="Api\ProductCategoryController.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\IdentityConfig.cs" />
@@ -215,6 +216,8 @@
     <Compile Include="Models\PostCategoryViewModel.cs" />
     <Compile Include="Models\PostTagViewModel.cs" />
     <Compile Include="Models\PostViewModel.cs" />
+    <Compile Include="Models\ProductCategoryViewModel.cs" />
+    <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\TagViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -229,7 +232,10 @@
     <Content Include="app\components\products\productEditView.html" />
     <Content Include="app\components\products\productListController.js" />
     <Content Include="app\components\products\productListView.html" />
+    <Content Include="app\components\product_category\productCategoryListController.js" />
+    <Content Include="app\components\product_category\productCategoryListView.html" />
     <Content Include="app\shared\modules\kphappy.common.js" />
+    <Content Include="app\shared\services\apiService.js" />
     <Content Include="assets\admin\css\AdminLTE.css" />
     <Content Include="assets\admin\css\AdminLTE.min.css" />
     <Content Include="assets\admin\css\alt\AdminLTE-bootstrap-social.css" />
@@ -2199,6 +2205,7 @@
     <Content Include="assets\admin\libs\jQuery\test\data\support\csp.log" />
     <Content Include="assets\admin\libs\jQuery\test\node_smoke_tests\.eslintrc.json" />
     <Content Include="assets\admin\libs\jQuery\test\promises_aplus_adapters\.eslintrc.json" />
+    <Content Include="app\components\product_category\productCategory.module.js" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -2227,7 +2234,6 @@
     <Content Include="Views\Admin\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="app\shared\services\" />
     <Folder Include="assets\client\" />
   </ItemGroup>
   <ItemGroup>
