--- a/KpHappy.Web/KpHappy.Web.csproj
+++ b/KpHappy.Web/KpHappy.Web.csproj
@@ -211,6 +211,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Infrastructure\Core\ApiControllerBase.cs" />
+    <Compile Include="Infrastructure\Core\PaginationSet.cs" />
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Models\PostCategoryViewModel.cs" />
@@ -234,6 +235,8 @@
     <Content Include="app\components\products\productListView.html" />
     <Content Include="app\components\product_category\productCategoryListController.js" />
     <Content Include="app\components\product_category\productCategoryListView.html" />
+    <Content Include="app\shared\directives\pagerDirective.html" />
+    <Content Include="app\shared\directives\pagerDirective.js" />
     <Content Include="app\shared\filter\statusFilter.js" />
     <Content Include="app\shared\modules\kphappy.common.js" />
     <Content Include="app\shared\services\apiService.js" />
